--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:0.4.2'
+		classpath 'com.android.tools.build:gradle:0.5+'
 	}
 }
 
@@ -19,7 +19,6 @@ apply plugin: 'maven-publish'
 version '1.0'
 group 'com.larswerkman'
 
-
 android {
 	compileSdkVersion 17
 	buildToolsVersion "17.0.0"
@@ -29,7 +28,7 @@ android {
             manifest.srcFile 'AndroidManifest.xml'
             java.srcDirs = ['src']
             resources.srcDirs = ['src']
-            aild.srcDirs = ['src']
+//            aild.srcDirs = ['src']
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
@@ -39,12 +38,12 @@ android {
     }
 }
 
-android.libraryVariants
-publishing {
-    publications {
-        maven(MavenPublication) {
-            artifact bundleRelease
-        }
-    }
-}
+//android.libraryVariants
+//publishing {
+//    publications {
+//        maven(MavenPublication) {
+//            artifact bundleRelease
+//        }
+//    }
+//}
 
